--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 /* lock screen */
 
 .lock-screen {
-    display: none;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -29,8 +29,11 @@ body {
 }
 
 .lock-container {
-    width: 80%;
     height: 80%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .date-time h2 {
@@ -45,10 +48,12 @@ body {
 }
 
 .lock-notification {
+    background-color: antiquewhite;
+    width: 90%;
     border-radius: 30px;
     margin-top: 50px;
     background-color: aliceblue;
-    padding: 20px;
+    padding: 10px;
 }
 
 .head {
@@ -63,8 +68,47 @@ body {
     border-radius: 50%;
 }
 
+.head p {
+    margin-left: 10px;
+    font-size: 15px;
+}
+
 .message {
     display: flex;
+    align-items: center;
+    margin-top: 10px;
+    margin-left: 20px;
+}
+
+.message i {
+    color: aliceblue;
+    background-color: lightcoral;
+    padding: 10px;
+    border-radius: 50%;
+}
+
+.message p {
+    margin-left: 15px;
+}
+
+.lock-icon {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 100px;
+}
+
+.lock-icon i {
+    font-size: 30px;
+    color: rgba(127, 255, 212, 0.7);
+}
+
+.lock-icon p {
+    margin-top: 5px;
+    color: aliceblue;
+    text-shadow: 0 0 5px black;
 }
 
 
