--- a/style.css
+++ b/style.css
@@ -87,8 +87,8 @@ body {
     border-radius: 50%;
 }
 
-.message p {
-    margin-left: 15px;
+.message-content {
+    margin-left: 20px;
 }
 
 .lock-icon {
